More correct footer on smaller devices

--- a/style/blog.css
+++ b/style/blog.css
@@ -17,14 +17,14 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 #content {
-    min-width: 300px;
+    min-width: 320px;
     background: #DDD url(textured_paper.jpg);
     color: #000;
     box-shadow: inset 1px -8px 15px -6px;
 }
 
 article, footer {
-    max-width: 750px;
+    max-width: 728px;
     margin: 0 auto;
     padding: 20px;
 }
@@ -36,8 +36,7 @@ article, footer {
 
 footer section {
     float: right;
-    margin-right: 5px;
-    width: 365px;
+    width: 364px;
     font-size: 16px;
 }
 
@@ -57,7 +56,7 @@ code pre {
     overflow: auto;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 767px) {
     #content {
         box-shadow: none;
     }
